--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -29,7 +29,7 @@
             android:id="@+id/tvHelp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="5dp"
             android:text="Help"
             android:textColor="@color/Dark_Green"
             android:textSize="40dp"
@@ -82,28 +82,56 @@
     <LinearLayout
         android:id="@+id/llHelp"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
+        android:layout_height="550dp"
         android:layout_below="@id/llScreenHeading"
         android:layout_marginTop="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
         <TextView
             android:id="@+id/tvHelpMessage"
-            android:layout_width="389dp"
+            android:layout_width="380dp"
             android:layout_height="450dp"
-            android:layout_marginLeft="10dp"
+            android:textSize="20dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="Help Message" />
+            android:text="Help Message"
+            android:layout_marginTop="6dp"
+            android:padding="8dp"/>
 
-        <Button
-            android:id="@+id/btnBack"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
+
+        <TextView
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="120dp"
-            android:background="@drawable/rounded_item_box"
-            android:theme="@style/button_colour_green"
-            android:text="Back" />
+            android:id="@+id/tvBackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textSize="20dp"
+            android:paddingLeft="78dp"
+            android:paddingRight="56dp"
+            android:paddingVertical="18dp"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Input_Grey"
+            />
+
+
+        <ImageView
+            android:id="@+id/imgBackIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-51dp"
+            android:layout_marginTop="-57.5dp"
+            android:background="@drawable/rounded_rectangle"
+            android:backgroundTint="@color/Muted_Green"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:paddingVertical="13dp"
+            android:paddingLeft="25dp"
+            android:paddingRight="15dp"
+            app:srcCompat="@drawable/navigation_arrow"
+            tools:ignore="SpeakableTextPresentCheck" />
+
 
     </LinearLayout>
 
