--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -89,9 +89,17 @@
         android:gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/tvHeading"
+            android:layout_width="380dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/Muted_Green"
+            android:background="@drawable/rounded_rectangle"
+            android:text="" />
+
+        <TextView
             android:id="@+id/tvHelpMessage"
             android:layout_width="380dp"
-            android:layout_height="450dp"
+            android:layout_height="400dp"
             android:textSize="20dp"
             android:background="@drawable/rounded_rectangle"
             android:text="Help Message"
@@ -134,6 +142,17 @@
 
 
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/edtName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="95dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
 
 </RelativeLayout>
