--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -143,16 +143,15 @@
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/edtName"
+
+    <TextView
+        android:id="@+id/tvHelpName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="95dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=""
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="102dp"
+        android:textSize="25dp"
+        android:text="TextView" />
 
 
 </RelativeLayout>
