--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -36,10 +36,10 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvAppTitleWelcome"
+            android:id="@+id/tvScreenFunction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create / Edit"
+            android:text="Create"
             android:textColor="@color/Dark_Green"
             android:textSize="25dp"
             android:textStyle="bold"
