--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -57,7 +57,7 @@
     <View
         android:id="@+id/vwEntryBackground"
         android:layout_width="match_parent"
-        android:layout_height="648dp"
+        android:layout_height="668dp"
         android:layout_marginTop="14dp"
         android:layout_below="@id/llCreateEditActivity"
         android:background="@drawable/backing_shape"
@@ -133,7 +133,7 @@
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/rounded_rectangle"
-        app:srcCompat="@drawable/cyanturtle"
+        app:srcCompat="@drawable/plusturtle"
         android:layout_below="@id/fcFragmentContainer"/>
 
 
