--- a/app/src/main/res/layout/activity_view_details_fragment.xml
+++ b/app/src/main/res/layout/activity_view_details_fragment.xml
@@ -167,7 +167,7 @@
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/rounded_rectangle"
-                app:srcCompat="@drawable/cyanturtle"
+                app:srcCompat="@drawable/plusturtle"
                 android:layout_weight="1"
                 android:layout_marginRight="5dp"
                 />
@@ -179,7 +179,7 @@
                 android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/rounded_rectangle"
-                app:srcCompat="@drawable/brownturtle"
+                app:srcCompat="@drawable/editturtle"
                 android:layout_weight="1"
                 android:layout_marginLeft="5dp"
                 />
