--- a/app/src/main/res/layout/activity_add_log.xml
+++ b/app/src/main/res/layout/activity_add_log.xml
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/llAddLog"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
         android:orientation="vertical">
 
@@ -91,23 +91,23 @@
             android:textColor="#FFFFFF" />
 
         <LinearLayout
-            android:id="@+id/llDate"
+            android:id="@+id/llStartDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnDate"
+                android:id="@+id/btnStartDate"
                 android:layout_width="30dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/rounded_rectangle"
-                android:text="Set Date"
+                android:text="Start Date"
                 android:textColor="#FFFFFF"
                 android:theme="@style/button_colour_green" />
 
             <TextView
-                android:id="@+id/tvDate"
+                android:id="@+id/tvStartDate"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
@@ -123,7 +123,7 @@
             android:id="@+id/tvOption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:text="Log Option"
             android:textColor="#FFFFFF" />
 
