--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -20,11 +20,13 @@
         android:id="@+id/imgBlackTurtle"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        app:srcCompat="@drawable/blackturtle"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:onClick="OnClick"
         android:rotation="-45"
-        />
+        app:srcCompat="@drawable/backturtle"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <LinearLayout
         android:id="@+id/llCreateEditActivity"
