--- a/app/src/main/res/layout/activity_create_category.xml
+++ b/app/src/main/res/layout/activity_create_category.xml
@@ -20,7 +20,9 @@
         android:id="@+id/imgBlackTurtle"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        app:srcCompat="@drawable/blackturtle"
+        app:srcCompat="@drawable/backturtle"
+        android:clickable="true"
+        android:onClick="OnClick"
         android:layout_marginLeft="300dp"
         android:layout_marginTop="10dp"
         android:rotation="-45"
